--- a/QuickTraceiOSLoggerDemo/Podfile
+++ b/QuickTraceiOSLoggerDemo/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '8.0'
+platform :ios, '9.0'
 
 workspace 'QuickTraceiOSLoggerDemo.xcworkspace'
 project 'QuickTraceiOSLoggerDemo.xcodeproj'
@@ -9,5 +9,5 @@ target 'QuickTraceiOSLoggerDemo' do
   use_frameworks!
 
   # Pods for QuickTraceiOSLoggerDemo
-  pod 'QuickTraceiOSLogger'
+  pod 'QuickTraceiOSLogger', :path => '../'
 end
