--- a/QuickTraceiOSLoggerDemo/Podfile
+++ b/QuickTraceiOSLoggerDemo/Podfile
@@ -6,7 +6,7 @@ project 'QuickTraceiOSLoggerDemo.xcodeproj'
 
 target 'QuickTraceiOSLoggerDemo' do
   # Uncomment this line if you're using Swift or would like to use dynamic frameworks
-  use_frameworks!
+  #use_frameworks!
 
   # Pods for QuickTraceiOSLoggerDemo
   pod 'QuickTraceiOSLogger', :path => '../'
